kaggle_environments/envs/open_spiel_env/games/go/visualizer/v2/src/components/Notation.module.css
.notation {
  font-family: "Mynerve", cursive;
  font-size: 1rem;
  line-height: 1.1;
  display: grid;
  justify-content: start;
  gap: 0.5ch;
  transform: rotate(3deg);
  overflow: visible;
  max-height: 10ch;

  transition:
    opacity 400ms,
    transform 500ms;
  @starting-style {
    opacity: 0;
    transform: translateY(20%);
  }
}

.notationInner {
  display: grid;
  gap: 0.5ch;
  text-wrap: pretty;
  max-width: 20ch;

  > * {
    font-size: 1em;
    margin: 0;
  }
}

.notation img {
  width: 8ch;
  transform: rotate(45deg);
}

.notation hr {
  width: 100%;
  height: 3px;
  border: 0;
  background-image: url("/images/squiggle-solid.png");
  background-repeat: repeat-x;
  background-position: center;
  background-size: 3.5rem;
}

@container (max-width: 600px) {
  .notation {
    grid-template-columns: auto 1fr;
    align-items: end;
    font-size: 0.6875rem;
  }

  .notation img {
    transform: rotate(0deg);
  }
}

